# oncall-tracker

./: Cargo.toml  README.md  config.toml
src/: main.rs
src/common/: handlers.rs  mod.rs  struts.rs
src/db/: mongo.rs
src/oncalls/: handlers.rs  mod.rs  repository.rs  structs.rs
src/system/: appstate.rs  config.rs  mod.rs
src/type_definitions/: handlers.rs  mod.rs  repository.rs  structs.rs
src/user/: handlers.rs  mod.rs  repository.rs  struts.rs
