[package]
name = "oncall-tracker"
version = "0.1.0"
edition = "2021"
publish = false
authors = [
    "Darek"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.6.20", features = ["tower-log"] }
axum-login = "0.5.0"
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["trace", "set-header", "timeout", "limit", "cors"] }
argon2 = "0.5.1"
rand_core = { version = "0.6.4", features = ["std"] }


futures = "0.3.28"
mongodb = { version = "2.6.0", features = ["zstd-compression", "snappy-compression", "zlib-compression"]}
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}

serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["v4"]}
bson = "2.6.1"


figment = { version = "0.10.10", features = ["toml", "env"] }
anyhow = "1.0.69" # error handling
env_logger = "0.10.0"
log = "0.4.17"
dotenv = "0.15.0"